--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,6 +12,7 @@
     "global": "^4.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-page-scroller": "^2.0.7-beta",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3"
   },
