--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,11 +10,13 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.6.5",
     "global": "^4.4.0",
+    "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-page-scroller": "^2.0.7-beta",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
