--- a/BackEnd/Demo/pom.xml
+++ b/BackEnd/Demo/pom.xml
@@ -109,6 +109,23 @@
             <artifactId>json-simple</artifactId>
             <version>1.1</version>
         </dependency>
+        <!--  Jackson -->
+         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+        <dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>2.9.2</version>
+		</dependency>
+        
 		<!--MySQL-->
 		<dependency>
 			<groupId>mysql</groupId>
