--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-page-scroller": "^2.0.7-beta",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
