--- a/BackEnd/Demo/pom.xml
+++ b/BackEnd/Demo/pom.xml
@@ -177,7 +177,10 @@
     				<artifactId>google-api-client</artifactId>
     				 <version>1.30.10</version>
   				 </dependency>
-
+  				 
+  		<!-- Spring Security -->
+  		
+  		
 	</dependencies>
     <build>
         <plugins>
