--- a/BackEnd/Demo/src/main/webapp/WEB-INF/web.xml
+++ b/BackEnd/Demo/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,8 @@
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>/WEB-INF/spring/root-context.xml
+		</param-value>
 	</context-param>
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -20,7 +21,10 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
+			<param-value>
+			/WEB-INF/spring/appServlet/servlet-context.xml
+			</param-value>
+			
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -30,7 +34,13 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+	<!-- HTTPS SSL 설정 -->
 	
+
+	
+	
+	
+
 	<!-- Encoding UTF-8 -->
 	<filter> 
     <filter-name>encodingFilter</filter-name> 
@@ -48,5 +58,7 @@
     <filter-name>encodingFilter</filter-name> 
     <url-pattern>/*</url-pattern> 
  </filter-mapping> 
+ 
+ 
 
 </web-app>
