--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-page-scroller": "^2.0.7-beta",
